# causal-genx

./: .gitignore  AGENTS.md  BENCHMARK_CPU_MPS.md  DOCS.md  LICENSE  README.md  backend-optim.md  gpu-optim.md  jax-porting.md  pyproject.toml  requirements-gpu.txt  requirements-tpu.txt  requirements.txt  tpu-optim.md
configs/: morphomnist_counterfactual.yaml  morphomnist_counterfactual_tpu_v6e4.yaml  morphomnist_image_model.yaml  morphomnist_image_model_gpu.yaml  morphomnist_image_model_tpu_v6e4.yaml  morphomnist_inference.yaml  morphomnist_predictor.yaml  morphomnist_predictor_tpu_v6e4.yaml  morphomnist_scm.yaml
docs/: adding_dataset.md
notebook/: train_morphomnist.ipynb
samples/morphomnist/: manifest.csv
scripts/: morphomnist_visualizer.py  run.py
src/: __init__.py  artifacts.py  benchmark.py  conditioning.py  config.py  contracts.py  datasets.py  hps.py  infer.py  main.py  models.py  run_gpu.sh  run_local.sh  run_slurm.sh  run_tpu.sh  runtime.py  test_gcs_write.py  tpu_launcher.py  train_setup.py  trainer.py  utils.py  workflows.py  xla_runtime.py
src/causal/: __init__.py  deep_scm.py  flow_scm.py  image_parent_predictor.py
src/data/: __init__.py  conditioning.py  morphomnist.py
src/models/: __init__.py  image_vae.py
src/pgm/: __init__.py  cf_parity.py  dscm.py  flow_pgm.py  run.sh  run_pgm.sh  run_predictor.sh  sup_aux_pgm.py  train_cf.py  train_pgm.py  utils_pgm.py
src/training/: __init__.py  common.py  counterfactual.py  counterfactual_support.py  image_loop.py  scm.py  (+4 more)
tests/: test_pgm_parity.py  test_sup_aux_parity.py  test_train_cf_parity.py
(+7 files in other folders)
